--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -11,3 +11,18 @@
     justify-content: $justify;
     align-items: $align;
 }
+
+@mixin link($color: primary-text,$font-weight: 400, $font-size: 14px, $text-decoration:none,) {
+    color: $color;
+    font-family: $standard-font;
+    font-weight: $font-weight;
+    font-size: $font-size;
+    text-decoration: $text-decoration;
+    letter-spacing: map-get($letter-spacing,links);
+    cursor: pointer;
+
+    &:hover,
+    &:focus{
+        color:map-get($colors,brand-blue);
+    }
+}
