--- a/sass/components/_button-close.scss
+++ b/sass/components/_button-close.scss
@@ -4,7 +4,7 @@
     right: 8px;
     width: 30px;
     height: 30px;
-    background-color: $white-color;
+    background-color: map-get($colors,white-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     cursor: pointer;
@@ -15,7 +15,7 @@
 
 .button-close:hover,
 .button-close:focus {
-    fill: $brand-blue;
-    border: 1px solid $brand-blue;
+    fill: map-get($colors,brand-blue);
+    border: 1px solid map-get($colors,brand-blue);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
