--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,17 +1,17 @@
 .button {
     width: 200px;
     height: 50px;
-    background-color: $brand-blue;
-    color: $white-color;
-    box-shadow: 0px 4px 4px $box-shadow;
-    border-color: $brand-blue;
+    background-color: map-get($colors,brand-blue);
+    color: map-get($colors,white-color);
+    box-shadow: 0px 4px 4px map-get($colors,box-shadow);
     border-radius: 4px;
-    font-family: 'Roboto';
+    border: none;
+    font-family: $standard-font;
     font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
+    font-weight: map-get($font-weight, bold);
+    font-size: map-get($font-size, enlarged);
     line-height: 30px;
-    letter-spacing: 0.06em;
+    letter-spacing: map-get($letter-spacing, header-primary);
     cursor: pointer;
 
     &:hover,
