--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -1,35 +1,19 @@
-// .container {
-//     width: 1200px;
-//     margin: 0 auto;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-// }
+.clients{
+    @include section-margin();
 
-.clients__container {
-    @include container($flex-direction: column, $justify: center);
-}
+    &__container {
+        @include container($flex-direction: column, $justify: center);
+    }
 
-.section__header-secondary {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $secondary-text;
-    margin-bottom: 50px;
-}
+    &__list {
+        list-style: none;
+        display: flex;
+        justify-content: space-between;
+    }
 
-.clients {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-
-    &__card {
+    &__item {
         position: relative;
-        background-color: $white-color;
+        background-color: map-get($colors,white-color);
         width: 170px;
         height: 92px;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -37,24 +21,26 @@
         border-radius: 4px;
         cursor: pointer;
 
-        &__logo {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            fill: $icon-background;
+        &:hover,
+        &:focus {
+            border: 1px solid map-get($colors,brand-blue);
+            transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
     }
+
+    &__logo {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        fill: map-get($colors,icon-background);
+    }
+
 }
 
-.clients__card:hover,
-.clients__card:focus {
-    border: 1px solid $brand-blue;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients__card:hover .clients__card__logo,
-.clients__card:focus .clients__card__logo {
-    fill: $brand-blue;
+// nie wiem jak to wpisać "sassowo"
+.clients__item:hover .clients__logo,
+.clients__item:focus .clients__logo {
+    fill: map-get($colors,brand-blue);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
