--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,23 +1,7 @@
-a {
-    text-decoration: none;
-}
-
-ul {
-    list-style: none;
-}
-
-// .container {
-//     width: 1200px;
-//     margin: 0 auto;
-//     display: flex;
-// }
-
-
-
 .footer {
     padding: 60px 0;
-    background-color: $section-dark-background;
-    color: $white-color;
+    background-color: map-get($colors,section-dark-background);
+    color: map-get($colors,white-color);
 
     &__container {
         @include container();
@@ -25,21 +9,24 @@ ul {
         &__box:not(:last-child) {
             margin-right: 78px;
         }
+
+        &__header{
+            margin-bottom: 20px;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 16px;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+        }
     }
 
     
 
     &__logo {
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 31px;
-        letter-spacing: 0.03em;
+        @extend %logo;
         margin-bottom: 20px;
-
-        &--color {
-            color: $brand-blue;
+        &--color{
+            color: map-get($colors,brand-blue);
         }
     }
 
@@ -55,76 +42,74 @@ ul {
     }
 
     &__link {
-        color: $footer-link;
+        color: map-get($colors,footer-link);
         margin-top: 9px;
 
         &:hover,
         &:focus {
-            color: $brand-blue;
+            color: map-get($colors,brand-blue);
             transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
     }
-}
 
-.footer__header,
-.footer__form__header {
-    margin-bottom: 20px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
+    &__socials{
+        &__list {
+            display: flex;
+            gap: 10px;
+            }
+        &__item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 44px;
+            height: 44px;
+            border-radius: 50%;
+            background: #ffffff1a;
+            fill: map-get($colors,white-color);
+            cursor: pointer;
 
-.footer__socials {
-    display: flex;
-    gap: 10px;
-
-    &__item {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 44px;
-        height: 44px;
-        border-radius: 50%;
-        background: #ffffff1a;
-        fill: $white-color;
-        cursor: pointer;
-
-        &:hover,
-        &:focus,
-        &:active {
-            background-color: $brand-blue;
-            transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            &:hover,
+            &:focus,
+            &:active {
+                background-color: map-get($colors,brand-blue);
+                transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            }
         }
     }
-}
+    &__form{
+        &__header{
+            margin-bottom: 20px;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 16px;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+        }
+        
+        &__input {
+            width: 358px;
+            height: 50px;
+            border: 1px solid #ffffff4d;
+            background-color: map-get($colors,section-dark-background);
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+            border-radius: 4px;
+            padding-left: 16px;
+            color: map-get($colors,brand-blue);
 
-.footer__form__input {
-    width: 358px;
-    height: 50px;
-    border: 1px solid #ffffff4d;
-    background-color: $section-dark-background;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    padding-left: 16px;
-    color: $white-color;
-}
-
-.footer__form__input::placeholder {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.03em;
-    color: $footer-link;
-}
-
+            &::placeholder {
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 20px;
+                display: flex;
+                align-items: center;
+                letter-spacing: 0.03em;
+                color: map-get($colors,footer-link);
+                }
+            }
+        }
+    
 .button {
     display: inline-flex;
     align-items: center;
@@ -132,11 +117,11 @@ ul {
     margin-left: 12px;
     width: 200px;
     height: 50px;
-    background-color: $brand-blue;
-    color: $white-color;
-    fill: $white-color;
-    box-shadow: 0px 4px 4px $box-shadow;
-    border-color: $brand-blue;
+    background-color: map-get($colors,brand-blue);
+    color: map-get($colors,white-color);
+    fill: map-get($colors,white-color);
+    box-shadow: 0px 4px 4px map-get($colors,box-shadow);
+    border-color: map-get($colors,brand-blue);
     border-radius: 4px;
     font-family: 'Roboto';
     font-style: normal;
@@ -149,4 +134,5 @@ ul {
     &__send-icon {
         margin-left: 24px;
     }
+}
 }
