--- a/sass/components/_form-modal.scss
+++ b/sass/components/_form-modal.scss
@@ -18,7 +18,7 @@
     font-size: 20px;
     line-height: 23px;
     text-align: center;
-    color: $black-color;
+    color: map-get($colors,black-color);
 }
 
 .border {
@@ -55,12 +55,12 @@ textarea{
 .form__input:hover,
 textarea:focus,
 textarea:hover {
-    outline: 1px solid $brand-blue;
+    outline: 1px solid map-get($colors,brand-blue);;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 input:focus + svg {
-    fill: $brand-blue;
+    fill: map-get($colors,brand-blue);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -112,12 +112,12 @@ input:focus + svg {
     background-image: url('../images/icon-check.svg');
     background-repeat: no-repeat;
     background-position: center;
-    background-color: $brand-blue;
-    outline: 1px solid $brand-blue;
+    background-color: map-get($colors,brand-blue);
+    outline: 1px solid map-get($colors,brand-blue);
 }
 
 label .link {
-    color: $brand-blue;
+    color: map-get($colors,brand-blue);
     text-decoration: underline;
     transition: transform 0.7s ease-in-out;
 }
