--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,27 +2,39 @@
     display: flex;
     height: 80px;
     align-items: center;
-    border-bottom: 1px solid $header-line;
+    border-bottom: 1px solid map-get($colors,header-line);
     width: 100%;
+
+    &__container {
+        @include container($align: center);
+    }
+    
+    &__logo {
+        @extend %logo;
+        color: map-get($colors,black-color);
+        &--color{
+            color: map-get($colors,brand-blue);
+        }
+    }
 }
 
-.header__container {
-    @include container($align: center);
-}
 
-.nav,
-.contact {
+.main-nav__list,
+.contact__list {
     display: flex;
     list-style: none;
 }
 
-.nav {
+
+.main-nav__list {
     gap: 46px;
 }
 
-.nav__link,
+.main-nav__link,
 .logo,
 .contact__link {
+
+    @include link($font-weight:500);
     font-family: 'Roboto';
     text-decoration: none;
     font-weight: 500;
@@ -31,33 +43,35 @@
     letter-spacing: 0.02em;
 }
 
-.nav__link {
-    color: $secondary-text;
+.main-nav__link {
+    color: map-get($colors,secondary-text);
+    
+    &:hover,
+    &:focus {
+        color: map-get($colors,brand-blue);
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
-.nav__link:hover,
-.nav__link:focus {
-    color: $brand-blue;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .active {
-    color: $brand-blue;
+    color: map-get($colors,brand-blue);
+    
+    &::after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 4px;
+        bottom: 0;
+        left: 0;
+        background-color: map-get($colors,brand-blue);
+        transform: translateY(29px);
+        border-radius: 2px;
+    }
 }
 
-.active::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 4px;
-    bottom: 0;
-    left: 0;
-    background-color: $brand-blue;
-    transform: translateY(29px);
-    border-radius: 2px;
-}
 
-.contact {
+.contact__list{
     display: flex;
     width: 100%;
     align-items: center;
@@ -67,10 +81,11 @@
 
 .contact__item {
     position: relative;
+
 }
 
 .contact__link {
-    color: $primary-text;
+    color:map-get($colors,primary-text);
     margin-right: 0;
 }
 
@@ -78,34 +93,20 @@
 .contact__link:focus,
 .contact__link:hover .contact__icon,
 .contact__link:focus .contact__icon {
-    color: $brand-blue;
-    fill: $brand-blue;
+    color: map-get($colors,brand-blue);
+    fill: map-get($colors,brand-blue);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo {
-    color: $black-color;
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
-    margin-right: 93px;
-}
-
-.logo--color {
-    color: $brand-blue;
-}
-
 .contact__icon {
-    fill: $primary-text;
+    fill: map-get($colors,primary-text);
     position: absolute;
     top: 50%;
     left: -25px;
     transform: translateY(-50%);
+    
+    &--reduce-space {
+        left: -19px;
+    }
 }
 
-.contact__icon--reduce-space {
-    left: -19px;
-}
