--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,17 +1,18 @@
-.top-section__container {
-    @include container($flex-direction: column, $align: center, $justify:center);
-    height: 100%;
-}
-.top-section {
+.slider {
     height: 600px;
     width: 100%;
-    background-color: $section-dark-background;
+    background-color: map-get($colors,section-dark-background);
     background-image: url('../images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    
+    &__container {
+        @include container($flex-direction: column, $align: center, $justify:center);
+        height: 100%;
+    }
 
     &__overlay {
-        background-color: $top-section__overlay;
+        background-color: map-get($colors,slider__overlay);
         opacity: 1;
         height: 100%;
     }
@@ -26,7 +27,7 @@
         text-align: center;
         letter-spacing: 0.06em;
         text-transform: uppercase;
-        color: $white-color;
+        color: map-get($colors,white-color);
         margin-bottom: 30px;
     }
 }
