--- a/sass/components/_strengths-section.scss
+++ b/sass/components/_strengths-section.scss
@@ -1,18 +1,23 @@
-.strengths__container{
-    @include container();
+.strengths{
+    @include section-margin();
+    
+    &__container{
+        @include container();
+    }
+
+    &__list {
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+        gap: 30px;
 }
-.strengths {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    gap: 30px;
 
     &__box {
         position: relative;
         margin-bottom: 30px;
-        // width: 270px;
+        // min-width: 270px;
         height: 120px;
-        background-color: $background-card;
+        background-color: map-get($colors, background-card);
 
         &__icon {
             position: absolute;
@@ -21,26 +26,23 @@
             transform: translate(-50%, -50%);
         }
     }
-
+    
     &__header {
-        margin-bottom: 10px;
-        font-family: 'Roboto';
+        font-family: $standard-font;
         font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
+        font-weight: map-get($font-weight, bold);
+        font-size: map-get($font-size, standard );
         line-height: 16px;
-        letter-spacing: 0.03em;
+        letter-spacing: map-get($letter-spacing, standard );
         text-transform: uppercase;
-        color: $secondary-text;
+        color: map-get($colors, secondary-text);
+        margin-bottom: 10px;
     }
 
     &__description {
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
+        font-weight: map-get($font-weight, regular);
         line-height: 24px;
-        letter-spacing: 0.03em;
-        color: $primary-text;
+        font-weight: map-get($colors, primary-text);
     }
+
 }
