--- a/sass/components/_form-modal.scss
+++ b/sass/components/_form-modal.scss
@@ -1,134 +1,114 @@
 .container-form {
-    margin: 40px;
-    width: auto;
-    height: 500px;
-    display: block;
+  margin: 40px;
+  width: auto;
+  height: 500px;
+  display: block;
 }
 
-.form {
-    margin: 40px;
-    width: auto;
-    height: 500px;
-    display: block;
+.form-header {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  color: map-get($colors, black-color);
 }
 
-.form__header {
-    margin-bottom: 12px;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
-    color: map-get($colors,black-color);
+.input {
+  width: 448px;
+  height: 40px;
+  border: none;
+  outline: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  text-indent: 40px;
 }
 
-.border {
-    margin-top: 4px;
-    margin-bottom: 10px;
+.input:focus,
+textarea:focus {
+  outline: 1px solid map-get($colors, brand-blue);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.form__input {
-    width: 448px;
-    height: 40px;
-    border: none;
-    outline: 1px solid rgba(33, 33, 33, 0.2);
-
-    border-radius: 4px;
-    text-indent: 40px;
-}
-
-.border {
-    position: relative;
-}
-
-.form__icon {
-    position: absolute;
-    left: 15px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-textarea{
-    margin-top: 4px;
-}
-
-.form__input:focus,
-.form__input:hover,
-textarea:focus,
-textarea:hover {
-    outline: 1px solid map-get($colors,brand-blue);;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 input:focus + svg {
-    fill: map-get($colors,brand-blue);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: map-get($colors, brand-blue);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__form__input-icons {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+.input-icons {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
-.modal__form__input-icons svg {
-    position: absolute;
-    margin-left: 10px;
+.input-icons svg {
+  position: absolute;
+  margin-left: 10px;
 }
 
 .comment textarea {
-    resize: none;
-    height: 120px;
-    width: 448px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    padding: 12px 16px;
+  resize: none;
+  height: 120px;
+  width: 448px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
 }
 
 .policy-container {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 30px;
-    margin-top: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
 }
 
 .modal-form-policy-text {
-    display: inline-flex;
+  display: inline-flex;
 }
 
 .modal-form-policy-text::before {
-    display: block;
-    content: '';
-    width: 16px;
-    height: 16px;
-    outline: 2px solid black;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-right: 8px;
+  display: block;
+  content: "";
+  width: 16px;
+  height: 16px;
+  outline: 2px solid map-get($colors, black-color);
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 8px;
 }
 
 .modal-form-policy:checked + .modal-form-policy-text::before {
-    border: none;
-    background-image: url('../images/icon-check.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: map-get($colors,brand-blue);
-    outline: 1px solid map-get($colors,brand-blue);
+  border: none;
+  background-image: url("../images/icon-check.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: map-get($colors, brand-blue);
+  outline: 1px solid map-get($colors, brand-blue);
+}
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
 }
 
 label .link {
-    color: map-get($colors,brand-blue);
-    text-decoration: underline;
-    transition: transform 0.7s ease-in-out;
+  color: map-get($colors, brand-blue);
+  text-decoration: underline;
+  transition: transform 0.7s ease-in-out;
 }
 
 label .link:hover,
 label .link:focus {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 .button-center {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
