--- a/css/main.css
+++ b/css/main.css
@@ -436,6 +436,41 @@ label .link:focus {
   left: -19px;
 }
 
+@media screen and (max-width: 1199px) {
+  .header {
+    padding: 0 15px;
+  }
+  .header__logo {
+    font-size: 24px;
+  }
+  .contact__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10px;
+    border: 1px solid green;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .contact__item:nth-child(2) {
+    margin-right: 21px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .main-nav__list,
+.contact__list {
+    display: none;
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header {
+    height: 60px;
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 .slider {
   height: 600px;
   width: 100%;
@@ -483,6 +518,14 @@ label .link:focus {
   margin-bottom: 30px;
 }
 
+@media screen and (max-width: 1199px) {
+  .slider__primary-heading {
+    font-size: 26px;
+    line-height: 42px;
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 .strengths {
   margin-top: 94px;
   margin-bottom: 94px;
@@ -547,6 +590,37 @@ label .link:focus {
   font-weight: #757575;
 }
 
+@media screen and (max-width: 1199px) {
+  .strengths__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .strengths__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .strengths__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (max-width: 767px) {
+  .strengths__item {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .strengths__header {
+    text-align: center;
+  }
+}
 .services {
   margin-top: 94px;
   margin-bottom: 94px;
@@ -609,6 +683,11 @@ label .link:focus {
   bottom: 0;
 }
 
+@media screen and (max-width: 1199px) {
+  .services {
+    display: none;
+  }
+}
 .team {
   margin-top: 94px;
   margin-bottom: 94px;
@@ -638,9 +717,16 @@ label .link:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+}
+.team__item {
+  -ms-flex-preferred-size: calc((100% - 90px) / 4);
+      flex-basis: calc((100% - 90px) / 4);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid blue;
 }
 .team__card {
   position: relative;
@@ -648,8 +734,8 @@ label .link:focus {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: 270px;
-  height: 428px;
+  width: 100%;
+  height: 100%;
 }
 .team__card__name {
   margin-top: 30px;
@@ -710,6 +796,14 @@ label .link:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 1199px) {
+  .team__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 .clients {
   margin-top: 94px;
   margin-bottom: 94px;
