--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,33 +1,46 @@
 .slider {
-    height: 600px;
-    width: 100%;
-    background-color: map-get($colors,section-dark-background);
-    background-image: url('../images/background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-    &__container {
-        @include container($flex-direction: column, $align: center, $justify:center);
-        height: 100%;
-    }
+  height: 600px;
+  width: 100%;
+  background-color: map-get($colors, section-dark-background);
+  background-image: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    &__overlay {
-        background-color: map-get($colors,slider__overlay);
-        opacity: 1;
-        height: 100%;
-    }
+  &__container {
+    @include container(
+      $flex-direction: column,
+      $align: center,
+      $justify: center
+    );
+    height: 100%;
+  }
 
-    
+  &__overlay {
+    background-color: map-get($colors, slider__overlay);
+    opacity: 1;
+    height: 100%;
+  }
+
+  &__primary-heading {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: map-get($colors, white-color);
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .slider {
     &__primary-heading {
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 900;
-        font-size: 44px;
-        line-height: 60px;
-        text-align: center;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
-        color: map-get($colors,white-color);
-        margin-bottom: 30px;
+      font-size: 26px;
+      line-height: 42px;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+  }
 }
