--- a/sass/components/_strengths-section.scss
+++ b/sass/components/_strengths-section.scss
@@ -46,3 +46,35 @@
     }
 
 }
+
+@media screen and (max-width: 1199px){
+    .strengths{
+        &__container{
+            display: flex;
+        }
+
+        &__list{
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        &__item {
+            flex-basis: calc((100% - 30px) / 2);
+            transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    }
+}
+
+@media screen and (max-width: 767px){
+    .strengths{
+
+        &__item {
+            flex-basis: calc(100% / 1);
+            transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        &__header{
+            text-align: center;
+        }
+    }
+}
