--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .backdrop {
@@ -530,6 +534,12 @@ label .link:focus {
   margin-top: 94px;
   margin-bottom: 94px;
 }
+@media screen and (max-width: 1199px) {
+  .strengths {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
 .strengths__container {
   min-width: 320px;
   max-width: 1200px;
@@ -591,11 +601,6 @@ label .link:focus {
 }
 
 @media screen and (max-width: 1199px) {
-  .strengths__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
   .strengths__list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -624,6 +629,12 @@ label .link:focus {
 .services {
   margin-top: 94px;
   margin-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .services {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
 .services__container {
   min-width: 320px;
@@ -692,6 +703,12 @@ label .link:focus {
   margin-top: 94px;
   margin-bottom: 94px;
 }
+@media screen and (max-width: 1199px) {
+  .team {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
 .team__container {
   min-width: 320px;
   max-width: 1200px;
@@ -719,17 +736,20 @@ label .link:focus {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 30px;
 }
 .team__item {
   -ms-flex-preferred-size: calc((100% - 90px) / 4);
       flex-basis: calc((100% - 90px) / 4);
+  width: 100%;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid blue;
 }
 .team__card {
-  position: relative;
   background-color: #fff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -802,11 +822,29 @@ label .link:focus {
         flex-basis: calc((100% - 30px) / 2);
     -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    max-height: 536px;
+    max-width: 354px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .team__item {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    max-height: 622px;
+    max-width: 450px;
   }
 }
 .clients {
   margin-top: 94px;
   margin-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .clients {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
 .clients__container {
   min-width: 320px;
@@ -833,9 +871,9 @@ label .link:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 .clients__item {
   position: relative;
@@ -845,6 +883,8 @@ label .link:focus {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  -ms-flex-preferred-size: calc((100% - 150px) / 6);
+      flex-basis: calc((100% - 150px) / 6);
   cursor: pointer;
 }
 .clients__item:hover, .clients__item:focus {
@@ -868,6 +908,28 @@ label .link:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 1199px) {
+  .clients__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (max-width: 767px) {
+  .clients__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+}
 .footer {
   padding: 60px 0;
   background-color: #2f303a;
@@ -1078,9 +1140,48 @@ label .link:focus {
   margin-left: 24px;
 }
 
+@media screen and (max-width: 1199px) {
+  .button {
+    margin-left: 100px;
+  }
+  .footer__container {
+    padding-left: 76px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__container__box {
+    -ms-flex-preferred-size: 33.3333333333%;
+        flex-basis: 33.3333333333%;
+    border: 1px solid green;
+  }
+  .footer__logo {
+    text-align: center;
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .footer__header {
+    text-align: center;
+  }
+  .footer__form__header {
+    text-align: center;
+  }
+  .footer__form__input {
+    margin-bottom: 20px;
+    width: 450px;
+  }
+}
 .products {
   margin-top: 94px;
   margin-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .products {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
 .products__filters__container {
   min-width: 320px;
