--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -8,7 +8,8 @@
     &__list {
         list-style: none;
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 30px;
     }
 
     &__item {
@@ -19,6 +20,7 @@
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
             0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
+        flex-basis: calc((100% - 150px) / 6);
         cursor: pointer;
 
         &:hover,
@@ -43,4 +45,29 @@
 .clients__item:focus .clients__logo {
     fill: map-get($colors,brand-blue);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+@media screen and (max-width: 1199px){
+    .clients{
+        &__list {
+            justify-content: center;
+        }
+
+        &__item{
+            flex-basis: calc((100% - 60px) / 3);
+        }
+    }
+}
+
+@media screen and (max-width: 767px){
+    .clients{
+        &__list {
+            justify-content: center;
+        }
+
+        &__item{
+            flex-basis: calc((100% - 30px) / 2);
+        }
+    }
 }
