--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -9,24 +9,32 @@
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    // justify-content: space-between;
+    justify-content: center;
     gap: 30px;
   }
 
   &__item {
     flex-basis: calc((100% - 90px) / 4);
+    //max-width: 450px;
+    width: 100%;
+    //max-height: 622px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid blue;
   }
 
   &__card {
-    position: relative;
+    // position: relative;
     background-color: map-get($colors, white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     width: 100%;
     height: 100%;
+
+    // &-picture {
+    //   max-width: 450px;
+    //   max-height: 460px;
+    // }
 
     &__name {
       margin-top: 30px;
@@ -86,13 +94,22 @@
 
 @media screen and (max-width: 1199px) {
   .team {
-    &__list {
-      
-    }
-
     &__item {
       flex-basis: calc((100% - 30px) / 2);
       transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      max-height: 536px;
+      max-width: 354px;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team {
+    &__item {
+      flex-basis: calc(100% / 1);
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      max-height: 622px;
+      max-width: 450px;
     }
   }
 }
