--- a/sass/utils/_style-reset.scss
+++ b/sass/utils/_style-reset.scss
@@ -1,13 +1,16 @@
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
 img {
-    display: block;
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
